--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       
         <ul class="contacts">
             <li><a href="mailto:info@devstudio.com" class="saite-contacts mail-nav">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="saite-contacts phone-nav">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111" class="saite-contacts phone-nav">+380961111111</a></li>
         </ul>
     </div>
     </header>
@@ -88,40 +88,50 @@
         </div>
         </section>
         <!--Наша команда-->
-        <section class="we">
+        <section class="section we">
+            <div class="conteiners">
             <h2 class="we-1">Наша команда</h2>
-            <ul class="our-team">
-                <li class="team-card-1">
-                    <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 >Игорь Демьяненко</h3>
+            <ul class="list our-team">
+                <li class="list team-card">
+                    <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270" >
+                    <h3  class="team-card-title">Игорь Демьяненко</h3>
                     <p class="ihor1">Product Designer</p>
                 </li>
-                <li class="team-card-2">
-                    <img src="./images/img5.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3>Ольга Репина</h3>
+                <li class="list team-card">
+                    <img src="./images/img5.jpg" alt="Ольга Репина" width="270" >
+                    <h3 class="team-card-title">Ольга Репина</h3>
                     <p class="ihor1">Frontend Developer</p>
                 </li>
-                <li class="team-card-3">
-                    <img src="./images/img6.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
+                <li class="list team-card">
+                    <img src="./images/img6.jpg" alt="Николай Тарасов" width="270" >
+                    <h3 class="team-card-title">Николай Тарасов</h3>
                     <p class="ihor1">Marketing</p>
                 </li>
-                <li class="team-card-4">
-                    <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
+                <li class="list team-card">
+                    <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270" >
+                    <h3 class="team-card-title">Михаил Ермаков</h3>
                     <p class="ihor1">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <!--подвал-->
-    <footer class="footer-nav1">
-        <a href="" class="footer-logo"><span class="footer-logo1">Web</span>Studio</a>
-        <section class="footer-address footer-bg"><address class="addres">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a></li>
-        </ul>
-    </section>
+    <footer>
+        <div class="container contact">
+            <a class="link logos" href="./index.html"><span class="logos-color">Web</span>Studio</a>
+            <address>
+                <p class="location contact-list">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="list contact-list">
+                    <li>
+                        <a class="link contact-links" href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li>
+                        <a class="link contact-links" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
+
