--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!--подвал-->
     <footer>
         <div class="container contact">
-            <a class="link logos" href="./index.html"><span class="logos-color">Web</span>Studio</a>
+            <a class="link logos" href="./index.html"><span class="logo-color">Web</span>Studio</a>
             <address>
                 <p class="location contact-list">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="list contact-list">
