--- a/portfolio.html
+++ b/portfolio.html
@@ -55,11 +55,11 @@
             <li><button class="filter-button" type="button">Маркетинг</button></li>
         </ul>
         <!--Проекты-->
-        <section>
-            <div class="grid">
+        <section >
+            <div class="clock">
             <h2 class="visually" >Проекты</h2>
-            <ul class=" galery">
-                <li class="grid-item project-1">
+            <ul class=" grid galery">
+                <li class=" grid-item project-1">
                   <a href="">  <img src="./images/portfolio/website.jpg" alt="технокряк" width="370" ></a>
                 
                     <h3 class="project-titles">Технокряк</h3>
