--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section class="section">
+        <section >
             <!--Чем мы занимаемся-->
-            <div class="conteiner">
+            <div class="conteiner-we">
                 <h2 class="what-we-do">Чем мы занимаемся</h2>
                 <ul class="block">
                     <li class=" photo-main"> <img src="./images/img.jpg" alt="набор кода" width="370" height="294"
@@ -92,9 +92,10 @@
             </div>
         </section>
         <!--Наша команда-->
-        <section class="section we">
-            <div class="conteiners">
+        <section >
+            <div class="wee">
                 <h2 class="we-1">Наша команда</h2>
+                
                 <ul class="list our-team">
                     <li class="list team-card">
                         <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270">
@@ -117,6 +118,7 @@
                         <p class="ihor1">UI Designer</p>
                     </li>
                 </ul>
+                
             </div>
         </section>
     </main>
