--- a/index.html
+++ b/index.html
@@ -21,43 +21,44 @@
 <body>
     <!--шапка-->
     <header>
-        <div class="conteiner nav">
-            <a href="./index.html" class="link logo">Web<span class="logotip">Studio</span></a>
-            <nav>
 
-                <ul class="list navigations">
-                    <li class="menu-item curent">
-                        <a href="./index.html" class="saite-nav1 current">Студия</a>
-                    </li>
-                    <li class="menu-item ">
-                        <a href="./portfolio.html" class="saite-nav1">Портфолио</a>
-                    </li>
-                    <li class="menu-item ">
-                        <a href="" class="saite-nav1">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
 
-            <ul class="contacts">
-                <li><a href="mailto:info@devstudio.com" class="saite-contacts mail-nav">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="saite-contacts phone-nav">+38 (096) 111 11 11</a></li>
+        <nav class="conteiner main-nav">
+            <a href="" class="logo">Web<span class="logotip">Studio</span></a>
+            <ul class="menu-nav list">
+                <li class="item">
+                    <a href="./index.html" class="saite-nav1 current">Студия</a>
+                </li>
+                <li class="item">
+                    <a href="./portfolio.html" class="saite-nav1">Портфолио</a>
+                </li>
+                <li class="item">
+                    <a href="" class="saite-nav1">Контакты</a>
+                </li>
             </ul>
-        </div>
+            <ul class="contacts list">
+                <li class="item"><a href="mailto:info@devstudio.com"
+                        class="saite-contacts mail-nav">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="saite-contacts phone-nav">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+
     </header>
     <!--Уникальный контент-->
     <main>
-        <section class="banner">
-            <div class="container">
-                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА </h1>
-                <button type="button" class="buttons"><span class="buts">Заказать услугу</span></button>
-            </div>
+
+        <section class="hero">
+
+            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА </h1>
+            <button type="button" class="buttons"><span class="buts">Заказать услугу</span></button>
+
         </section>
         <!-- Наше преимущество-->
         <section class="section-about-us">
-            <div class="conteiner">
+            <div class="section conteiners">
                 <h2></h2>
-                <ul class="list about-us">
-                    <li class="list feature1">
+                <ul class="about-us">
+                    <li class="feature1">
                         <h3 class="section-about-us-title">Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
@@ -69,7 +70,7 @@
                         <h3 class="section-about-us-title">Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="feature4">
+                    <li class="feature1">
                         <h3 class="section-about-us-title">Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -77,54 +78,57 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section >
+        <section class="containers ">
             <!--Чем мы занимаемся-->
-            <div class="conteiner-we">
-                <h2 class="what-we-do">Чем мы занимаемся</h2>
-                <ul class="block">
-                    <li class=" photo-main"> <img src="./images/img.jpg" alt="набор кода" width="370" height="294"
-                            class="box1"></li>
-                    <li class=" photo-main"><img src="./images/img1.jpg" alt="мобильное устройство" width="370"
-                            height="294" class="box2"></li>
-                    <li class=" photo-main"><img src="./images/img2.jpg" alt="цветовая палитра" width="370" height="294"
-                            class="box3"></li>
-                </ul>
-            </div>
+
+            <h2 class="what-we-do list">Чем мы занимаемся</h2>
+            <ul class="block-title ">
+                <li class="grid-title">
+                    <img src="./images/img.jpg" alt="набор кода" width="370">
+                </li>
+                <li class="grid-title">
+                    <img src="./images/img1.jpg" alt="мобильное устройство" width="370">
+                </li>
+                <li class="grid-title">
+                    <img src="./images/img2.jpg" alt="цветовая палитра" width="370">
+                </li>
+            </ul>
+
         </section>
         <!--Наша команда-->
-        <section >
-            <div class="wee">
+        <div class="banners">
+            <section class="container">
+
                 <h2 class="we-1">Наша команда</h2>
-                
-                <ul class="list our-team">
-                    <li class="list team-card">
+                <ul class="our-team list">
+                    <li class="team">
                         <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3 class="team-card-title">Игорь Демьяненко</h3>
+                        <h3>Игорь Демьяненко</h3>
                         <p class="ihor1">Product Designer</p>
                     </li>
-                    <li class="list team-card">
+                    <li class="team teams">
                         <img src="./images/img5.jpg" alt="Ольга Репина" width="270">
-                        <h3 class="team-card-title">Ольга Репина</h3>
+                        <h3>Ольга Репина</h3>
                         <p class="ihor1">Frontend Developer</p>
                     </li>
-                    <li class="list team-card">
+                    <li class="team">
                         <img src="./images/img6.jpg" alt="Николай Тарасов" width="270">
-                        <h3 class="team-card-title">Николай Тарасов</h3>
+                        <h3>Николай Тарасов</h3>
                         <p class="ihor1">Marketing</p>
                     </li>
-                    <li class="list team-card">
+                    <li class="team">
                         <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270">
-                        <h3 class="team-card-title">Михаил Ермаков</h3>
+                        <h3>Михаил Ермаков</h3>
                         <p class="ihor1">UI Designer</p>
                     </li>
                 </ul>
-                
-            </div>
-        </section>
+
+            </section>
+        </div>
     </main>
     <!--подвал-->
-    <footer>
-        <div class="container contact">
+    <footer class="footer-bg">
+        <div class="containerss contact">
             <a class="link logos" href="./index.html"><span class="logo-color">Web</span>Studio</a>
             <address>
                 <p class="location contact-list">г. Киев, пр-т Леси Украинки, 26</p>
@@ -140,3 +144,6 @@
         </div>
     </footer>
 </body>
+
+
+</html>
