--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
 
 
-        <nav class="conteiner main-nav">
+        <nav class="conteiner-header main-nav">
             <a href="" class="logo">Web<span class="logotip">Studio</span></a>
             <ul class="menu-nav list">
                 <li class="item ">
@@ -55,30 +55,30 @@
         </section>
         <!-- Наше преимущество-->
         <section class="section-about-us">
-            <div class="section conteiners">
+            <div class="section">
                 <h2></h2>
                 <ul class="about-us">
-                    <li class="feature1">
-                        <h3 class="section-about-us-title">Внимание к деталям</h3>
+                    <li class=" feature1">
+                        <h3 class="section-about-us-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="feature1">
-                        <h3 class="section-about-us-title">Пунктуальность</h3>
+                        <h3 class="section-about-us-title">ПУНКТУАЛЬНОСТЬ</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="feature1">
-                        <h3 class="section-about-us-title">Планирование</h3>
+                        <h3 class="section-about-us-title">ПЛАНИРОВАНИЕ</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="feature1">
-                        <h3 class="section-about-us-title">Современные технологии</h3>
+                        <h3 class="section-about-us-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section class="containers ">
+        <section class="container ">
             <!--Чем мы занимаемся-->
 
             <h2 class="what-we-do list">Чем мы занимаемся</h2>
@@ -106,17 +106,17 @@
                         <h3>Игорь Демьяненко</h3>
                         <p class="ihor1">Product Designer</p>
                     </li>
-                    <li class="team teams">
+                    <li class="team teams ">
                         <img src="./images/img5.jpg" alt="Ольга Репина" width="270">
                         <h3>Ольга Репина</h3>
                         <p class="ihor1">Frontend Developer</p>
                     </li>
-                    <li class="team">
+                    <li class="team teams">
                         <img src="./images/img6.jpg" alt="Николай Тарасов" width="270">
                         <h3>Николай Тарасов</h3>
                         <p class="ihor1">Marketing</p>
                     </li>
-                    <li class="team">
+                    <li class="team teams">
                         <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270">
                         <h3>Михаил Ермаков</h3>
                         <p class="ihor1">UI Designer</p>
@@ -128,11 +128,11 @@
     </main>
     <!--подвал-->
     <footer class="footer-bg">
-        <div class="containerss contact">
+        <div class="container contact">
             <a class="link logos" href="./index.html"><span class="logo-color">Web</span>Studio</a>
             <address>
                 <p class="location contact-list">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="list contact-list">
+                <ul class="list ">
                     <li>
                         <a class="link contact-links" href="mailto:info@example.com">info@example.com</a>
                     </li>
